--- a/blogpost.html
+++ b/blogpost.html
@@ -834,6 +834,9 @@
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
                 <p>Jesse Lea&ntilde;os</p>
+                <p>Pedro</p>
+                <p>Pablo</p>
+                <p>Andres</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
