--- a/blogpost.html
+++ b/blogpost.html
@@ -837,6 +837,7 @@
                 <p>Pedro</p>
                 <p>Pablo</p>
                 <p>Andres</p>
+                <p>TOÑO</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
