--- a/blogpost.html
+++ b/blogpost.html
@@ -838,6 +838,7 @@
                 <p>Pablo</p>
                 <p>Andres</p>
                 <p>TOÑO</p>
+                <p>Pedrin</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
