--- a/blogpost.html
+++ b/blogpost.html
@@ -839,6 +839,7 @@
                 <p>Andres</p>
                 <p>TOÑO</p>
                 <p>Pedrin</p>
+                <p>Anastacio</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
