--- a/blogpost.html
+++ b/blogpost.html
@@ -840,6 +840,7 @@
                 <p>TOÑO</p>
                 <p>Pedrin</p>
                 <p>Anastacio</p>
+                <p>Brujo</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
